# NSU_OPP

lab1/: CMakeLists.txt  lab1.ods  run_mpe.sh  run_n_procs.sh
lab1/run_scripts/: lab1_run_16p.sh  lab1_run_1p.sh  lab1_run_2p.sh  lab1_run_4p.sh  lab1_run_8p.sh  lab1_run_mpe.sh
lab1/src/: BinIO.cpp  BinIO.h  main.cpp  sleSolver.cpp  sleSolver.h
lab1/src/include/: sleSolver.h
lab2/: CMakeLists.txt  lab2opp.ods
lab2/src/: BinIO.cpp  SLE_Solver.cpp  main.cpp
lab2/src/include/: BinIO.h  SLE_Solver.h
lab2/src/include/solvers/: MultipleSectionsOMP.h  NonParallel.h  OneSectionOMP.h
lab2/src/solvers/: MultipleSectionsOMP.cpp  NonParallel.cpp  OneSectionOMP.cpp
lab2_5/: CMakeLists.txt
lab2_5/src/: SortableArray.cpp  SortableArray.h  main.cpp
lab3/: CMakeLists.txt  lab3.ods  run_mpe.sh  run_n_procs.sh  submit_mpe.sh
lab3/src/: MatrixMultiplier.cpp  MatrixMultiplier.h  main.cpp
lab4/: CMakeLists.txt  lab4.ods
lab4/src/: JacobiSolver3D.cpp  JacobiSolver3D.h  main.cpp
lab5/: CMakeLists.txt  lab5.ods
lab5/src/: TaskManager.cpp  TaskManager.h  main.cpp
